# qstress

./: pyproject.toml
src/qstress/: cli.py
