[build-system]

requires = ["hatchling"]

build-backend = "hatchling.build"

[project]

name = "qstress"

dynamic = ["version"]

authors = [{ name = "Brian Law", email = "gmbrianlaw@gmail.com" }]

license = "MIT"

description = 'A simple tool for stress testing.'

readme = "README.md"

requires-python = ">=3.8"

keywords = []

dependencies = ["typer[all]>=0.9.0"]

[project.urls]

Documentation = "https://github.com/GMbrianlaw/qstress#readme"
Issues = "https://github.com/GMbrianlaw/qstress/issues"
Source = "https://github.com/GMbrianlaw/qstress"

[tool.hatch.version]

path = "src/qstress/__about__.py"

[[tool.hatch.envs.all.matrix]]

python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
